Fix preset dropdown cutoff

--- a/src/app.css
+++ b/src/app.css
@@ -27,6 +27,7 @@ body {
     height: 100vh;
     padding: 15px;
     padding-left: 0;
+    z-index: 2;
 }
 
 #controlpanel {
@@ -64,6 +65,7 @@ body {
     left: 0;
     bottom: 0;
     text-align: center;
+    z-index: 1;
 }
 
 input[type=number], select, input[type=color], button, .button {
